--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     padding: 5px;
     line-height: 1.6;
     background: #f5f5f5; /* light grey/white */
+    scroll-behavior: smooth;
 }
 
 header {
@@ -18,6 +19,14 @@ nav a {
     background: white;
     margin: 10px;
     border-radius: 8px;
+    text-decoration: none;
+    color: purple;
+}
+
+nav a:hover {
+    background: #ddd; /* white */
+    color: #333; /* grey*/
+    transition: 0.3s;
 }
 
 form input, form textarea {
@@ -34,4 +43,25 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+}
+
+section {
+    padding: 40px 20px;
+}
+
+header, footer {
+    background: lightgreen; /* black */
+    color: #333; /* grey */
+    text-align: center;
+    padding: 20px 0;
+}
+
+a {
+    text-decoration: none;
+    color: blueviolet;
+}
+
+a:hover {
+    color: #333; /* grey*/
+    transition: 0.3s;
 }
