--- a/style.css
+++ b/style.css
@@ -65,3 +65,14 @@ a:hover {
     color: #333; /* grey*/
     transition: 0.3s;
 }
+
+section {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: all 0.6s ease-out;
+}
+
+section.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
